fix: #32 solved null pointer exception at sample bulk edit